# scLiTr

./: LISENCE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml  python-publish.yml  tests.yml
docs/: requirements.txt
docs/source/: Basic_usage.ipynb  Cluster_based_SHAP.ipynb  Cluster_free_SHAP.ipynb  Multiple_injections.ipynb  api.rst  conf.py  custom.css  index.rst  tutorial.rst
sclitr/: __init__.py  datasets.py  pl.py  plotting.py  pp.py  tl.py  tools.py  utils.py  word2vec.py
tests/: test_core.py
