[metadata]
name = scLiTr
version = 0.1.2
author = Sergey Isaev
author_email = sergey.isaev@meduniwien.ac.at
description = Package for an analysis of lineage-tracing scRNA-Seq data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kharchenkolab/scLiTr
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pynndescent
    scanpy
    scikit-learn
    torch
    mpltern
